# scikit-fingerprints

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  base.py  benchmark.ipynb  example-use.ipynb  example_bin_classification.py  main.py  morgan_4_ogbg_molhiv.ipynb  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tmp.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-publish-docs.yml  debug.yml  docs-publish.yml  pypi-publish.yml  python-publish.yml  python-test-light.yml  python-test.yml  test-docs.yml  test-pypi-publish.yml  tests.yml
.tmp_coverage_files/: .coverage.LAPTOP-9IQKJTD9.16356.XXvHjJbx
benchmarking/: benchmark.ipynb  benchmark.py  example_classification.ipynb  example_classification.py  fp_speedup_benchmark.py  fp_tuning.py  hotfix.md  memory_usage.py  ruff.toml  saving_fingerprints_to_npy.py  time_benchmark.py
descriptors/: topological.py
doc/: conf.py
docs/: Makefile  api_reference.rst  conf.py  examples.rst  index.rst  usage.rst
docs/_static/: custom.css
docs/_templates/: class.rst
docs/logos/: README.md
docs/modules/: api_reference.rst  applicability_domain.rst  bases.rst  classes.rst  clustering.rst  datasets.rst  descriptors.rst  distances.rst  filters.rst  fingerprints.rst  metrics.rst  model_selection.rst  moleculenet.rst  preprocessing.rst  similarities.rst  similarities_and_distances.rst  utils.rst
emf/: base.py
emf/benchmarking/: benchmark.ipynb  benchmark.py
emf/featurizers/: fingerprints.py
emf/tests/: fingerprints_tests.py
examples/: 01_skfp_introduction.ipynb  02_fingerprint_types.ipynb  03_pipelines.ipynb  04_conformers.ipynb  05_hyperparameter_tuning.ipynb  06_dataset_splits.ipynb  07_datasets_and_benchmarking.ipynb  08_similarity_and_distance_metrics.ipynb  09_molecular_filters.ipynb  10_molecular_clustering.ipynb  README.md
featurizers/: descriptors.py  fingerprint_helper_functions.py  fingerprints.py  map4.py  map4_mhfp_helper_functions.py  minhash.py
scikit-fingerprints/: base.py  example_bin_classification.py
scikit-fingerprints/benchmarking/: benchmark.py  example_classification.py
scikit-fingerprints/featurizers/: fingerprints.py
skfp/: __init__.py  parallel.py  preprocessing.py  rdkit_logging.py  utils.py  validators.py
skfp/applicability_domain/: __init__.py  bounding_box.py  convex_hull.py  distance_to_centroid.py  hotelling_t2_test.py  knn.py  leverage.py  pca_bounding_box.py  prob_std.py  response_variable_range.py  standard_deviation.py  topkat.py
skfp/bases/: __init__.py  base_ad_checker.py  base_filter.py  base_fp_transformer.py  base_preprocessor.py  base_substructure_filter.py  base_substructure_fp.py
skfp/clustering/: __init__.py  maxmin.py  minmax.py
skfp/datasets/: __init__.py  moleculenet.py  utils.py
skfp/descriptors/: __init__.py  burden.py  charge.py  constitutional.py  kappa_shape.py  topological.py
skfp/distances/: __init__.py  all_bit.py  braun_blanquet.py  ct4.py  dice.py  fraggle.py  harris_lahey.py  kulczynski.py  mcconnaughey.py  mcs.py  rand.py  rogot_goldberg.py  russell.py  simpson.py  sokal_sneath.py  tanimoto.py  utils.py
skfp/filters/: __init__.py  beyond_ro5.py  bms.py  brenk.py  faf4_druglike.py  faf4_leadlike.py  ghose.py  glaxo.py  gsk.py  hao.py  inpharmatica.py  lint.py  lipinski.py  mlsmr.py  mol_weight.py  nibr.py  nih.py  oprea.py  pains.py  pfizer.py  reos.py  rule_of_four.py  rule_of_oprea.py  rule_of_reos.py  rule_of_three.py  rule_of_two.py  rule_of_veber.py  rule_of_xu.py  surechembl.py  tice_herbicides.py  tice_insecticides.py  utils.py  valence_discovery.py  zinc_basic.py  zinc_druglike.py
skfp/fingerprints/: ECFP.py  __init__.py  atom_pair.py  atom_pairs.py  autocorr.py  avalon.py  base.py  bcut.py  bcut2d.py  bp.py  bt.py  e3fp.py  e3fp_fp.py  e_state.py  ecfp.py  electroshape.py  erg.py  estate.py  functional_groups.py  getaway.py  ghose_crippen.py  klekota_roth.py  laggner.py  layered.py  lingo.py  maccs.py  maccs_keys.py  map.py  map4.py  mhfp.py  mordred_fp.py  morgan.py  morse.py  mqns.py  pattern.py  pharmacophore.py  physiochemical_properties.py  pubchem.py  rdf.py  rdk.py  (+10 more)
skfp/metrics/: __init__.py  auroc.py  multioutput.py  spearman.py  utils.py  virtual_screening.py
skfp/model_selection/: __init__.py  grid_search.py  maxmin_split.py  randomized_scaffold_split.py  randomized_search.py  scaffold_split.py  utils.py
skfp/other/: util_transformers.py
skfp/preprocessing/: __init__.py  base.py  conformer_generator.py  mol_to_from_smiles.py  standardization.py
skfp/similarities/: tanimoto.py
skfp/similarities_and_distances/: __init__.py  tanimoto.py
skfp/utils/: __init__.py  functions.py  parallel.py  rdkit_logging.py  splitters.py  tqdm_settings.py  validators.py
tests/: README.md  conftest.py  docs_tests.py  fingerprints_tests.py  fingerprints_tests_light.py  helpers.py  parallel.py  test_sklearn_compatibility.py  utils.py  validators.py
tests/applicability_domain/: bounding_box.py  convex_hull.py  distance_to_centroid.py  hotelling_t2_test.py  knn.py  leverage.py  pca_bounding_box.py  prob_std.py  response_variable_range.py  standard_deviation.py  topkat.py  utils.py
tests/bases/: base_filter.py  base_fp_transformer.py  base_preprocessor.py  base_substructure_fp.py
tests/clustering/: test_maxmin.py  test_minmax.py
tests/datasets/: lrgb.py  moleculeace.py  moleculenet.py  tdc.py  test_utils.py  utils.py
tests/descriptors/: burden.py  charge.py  constitutional.py  kappa_shape.py  topological.py
tests/distances/: __init__.py  all_bit.py  braun_blanquet.py  common.py  conftest.py  ct4.py  dice.py  fraggle.py  harris_lahey.py  kulczynski.py  mcconnaughey.py  mcs.py  rand.py  rogot_goldberg.py  russell.py  simpson.py  sokal_sneath.py  tanimoto.py  test_utils.py  utils.py
tests/dupa/: main.py
tests/filters/: beyond_ro5.py  bms.py  brenk.py  faf4_druglike.py  faf4_leadlike.py  ghose.py  glaxo.py  gsk.py  hao.py  inpharmatica.py  lint.py  (+24 more)
utils/: logger.py
(+269 files in other folders)
