[project]
name = "skfp"
dynamic = ["version"]  # version is read with poetry-dynamic-versioning on GitHub release from Git tag
description = "Library for effective molecular fingerprints calculation"
authors = [
    { name = "Scikit-Fingerprints Development Team", email = "scikitfingerprints@gmail.com" }
]
repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
documentation = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
keywords = ["molecular fingerprints", "molecular descriptors", "cheminformatics"]
license = "MIT"
packages = [
    { include = "skfp" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9,<3.13"

dependencies = [
    "descriptastorus>=2.0.0",
    "e3fp>=1.0.0",
    "huggingface_hub>=0.0.0",
    "joblib>=1.0.0",
    "mordredcommunity>=2.0.0",
    "numba>=0.48.0,<1",
    "numpy>=1.20.0,<2",
    "pandas<3",
    "rdkit<=2024.3.3",
    "scikit-learn>=1.0.0",
    "scipy>=1.0.0",
    "tqdm>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/scikit-fingerprints/scikit-fingerprints"
"Documentation" = "https://scikit-fingerprints.github.io/scikit-fingerprints/"
"Repository" = "https://github.com/scikit-fingerprints/scikit-fingerprints"
"Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "*"
jupyter = "*"
mypy = "*"
pip-audit = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
setuptools = "*"  # to avoid PyCharm errors
xenon = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "*"
pip-audit = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"
xenon = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
ipython = "*"
nbsphinx = "*"
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-copybutton = "*"

[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
lightgbm = "*"
matplotlib = "*"
ogb = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
latest-tag = true
tag-branch = "remotes/origin/master"
style = "pep440"
strict = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.{{ distance }}.{{timestamp}}{% endif %}"

[tool.pytest.ini_options]
python_files = "*.py"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
