[project]
name = "scikit-fingerprints"
version = "0.0.0"  # version set dynamically in GitHub Actions from Git tags
description = "Library for effective molecular fingerprints calculation"
authors = [{ name = "AGH ML & Chemoinformatics Group", email = "jadamczy@agh.edu.pl" }]
keywords = ["molecular fingerprints", "molecular descriptors", "chemoinformatics", "chemistry", "machine learning"]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

requires-python = ">=3.10,<3.14"
dependencies = [
    "descriptastorus>=2.0.0,<3",
    "e3fp>=1.2.6,<2",
    "huggingface_hub<1",
    "joblib>=1.0.0,<2",
    "mordredcommunity>=2.0.0,<3",
    "numba<1",
    "numpy>=1.20.0,<3",
    "pandas<3",
    "rdkit<=2025.3.3",
    "scikit-learn>=1.0.0,<2",
    "scipy>=1.0.0,<2",
    "tqdm>=4.0.0,<5"
]

[project.urls]
homepage = "https://github.com/scikit-fingerprints/scikit-fingerprints"
repository = "https://github.com/scikit-fingerprints/scikit-fingerprints"
documentation = "https://scikit-fingerprints.readthedocs.io/latest"
"Bug Tracker" = "https://github.com/scikit-fingerprints/scikit-fingerprints/issues"

[dependency-groups]
dev = [
    "coverage",
    "jupyter",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
    "ruff",
    "setuptools>=80",
    "xenon"
]

test = [
    "mypy",
    "ruff",
    "xenon",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-rerunfailures"
]

docs = [
  "ipython",
  "nbsphinx",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-copybutton"
]

eval = [
    "lightgbm",
    "matplotlib",
]

[tool.pytest.ini_options]
python_files = "*.py"
addopts = "--assert=plain"
filterwarnings = [
    "ignore:.*shared_ptr<RDKit.*already registered.*:RuntimeWarning",
    "ignore:.*SciPy.*sokalmichener.*:DeprecationWarning",
    "ignore:A worker stopped.*:UserWarning",
    "ignore:Precision loss occurred.*:RuntimeWarning",
    "ignore:The total space of parameters.*:UserWarning",
    "ignore:Function auroc_score.*:FutureWarning"
]

[tool.uv.build-backend]
module-name = "skfp"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
